--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -1,16 +1,16 @@
 @charset "utf-8";
 
 /* button */
-.btn-large {display:inline-flex;align-items:center;justify-content:center;height:52px;font-size:18px;border-radius:8px;padding:16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
-.btn-medium {display:inline-flex;align-items:center;justify-content:center;height:48px;font-size:16px;border-radius:8px;padding:14px 16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
-.btn-small {display:inline-flex;align-items:center;justify-content:center;height:32px;font-size:14px;border-radius:8px;padding:6px 12px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
+.btn-large {display:flex;width:fit-content;align-items:center;justify-content:center;height:52px;font-size:18px;border-radius:8px;padding:16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
+.btn-medium {display:flex;width:fit-content;align-items:center;justify-content:center;height:48px;font-size:16px;border-radius:8px;padding:14px 16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
+.btn-small {display:flex;width:fit-content;align-items:center;justify-content:center;height:32px;font-size:14px;border-radius:8px;padding:6px 12px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
 .btn-large,
 .btn-medium,
 .btn-small {transition:background-color 0.1s ease;}
 
-.btn-noborder {display:inline-flex;align-items:center;justify-content:center;font-size:14px;padding:4px;;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;border-radius:8px;}
+.btn-noborder {display:flex;width:fit-content;align-items:center;justify-content:center;font-size:14px;padding:4px;;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;border-radius:8px;}
 
-.btn-border {display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:8px;border:1px solid var(--border-8);background-color:var(--background-bg_white);}
+.btn-border {display:flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:8px;border:1px solid var(--border-8);background-color:var(--background-bg_white);}
 .btn-border.is-active {background-color:var(--background-bg_gray);border-color:transparent;}
 
 .btn-primary {background-color:var(--button-primary-enabled);color:var(--button-primary-onEnabled);}
@@ -45,7 +45,7 @@
 
 .btn-round {border-radius:50px;}
 
-.anchor {display:inline-flex;color:var(--button-textBtn-Enabled);line-height:1;}
+.anchor {display:flex;width:fit-content;color:var(--button-textBtn-Enabled);line-height:1;}
 .anchor.chevron {align-items:center;gap:8px;white-space:nowrap;}
 .anchor.chevron:after {content:'';display:flex;align-items:center;justify-content:center;flex:0 0 6px;width:6px;height:12px;
     -webkit-mask-position:center center;
@@ -58,7 +58,7 @@
     mask-image:url(../images/arrow/ico_textBtnLink_12_gr.svg);
     background-color:var(--button-textBtn-Enabled);
 }
-.chevron-only {display:inline-flex;width:16px;height:16px;flex:0 0 16px;background:url(../images/arrow/ic_arw_link_gray_16.svg) center center / contain no-repeat;}
+.chevron-only {display:flex;width:16px;height:16px;flex:0 0 16px;background:url(../images/arrow/ic_arw_link_gray_16.svg) center center / contain no-repeat;}
 
 /* button inner icon */
 .btn-large > i,
@@ -192,7 +192,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .inp-toggle input:checked:before {left:21px;}
 
 /* inp-btn */
-.inp-btn {position:relative;display:inline-flex;align-items:center;justify-content:center;padding:0 12px;vertical-align:top;}
+.inp-btn {position:relative;display:flex;width:fit-content;align-items:center;justify-content:center;padding:0 12px;vertical-align:top;}
 .inp-btn input {appearance:none;-webkit-appearance:none;position:absolute;left:0;top:0;width:100%;height:100%;border:1px solid var(--gray200);background-color:var(--white);z-index:0;border-radius:50px;}
 .inp-btn input:checked {background-color:var(--gray900);border-color:transparent;}
 .inp-btn b {font-size:15px;line-height:34px;font-weight:400;color:var(--gray900);white-space:nowrap;z-index:1;}
@@ -200,7 +200,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 /* inp-btn:focus-within {outline:2px solid black;} */
 
 /* inp-box */
-.inp-box {position:relative;display:inline-flex;align-items:center;justify-content:center;padding:0 12px;}
+.inp-box {position:relative;display:flex;width:fit-content;align-items:center;justify-content:center;padding:0 12px;}
 .inp-box input {appearance:none;-webkit-appearance:none;position:absolute;left:0;top:0;width:100%;height:100%;border:1px solid var(--gray300);background-color:var(--white);z-index:0;border-radius:8px;}
 .inp-box input:checked {background-color:var(--red50);border-color:var(--red300);}
 .inp-box b {font-size:15px;line-height:40px;font-weight:400;color:var(--gray900);white-space:nowrap;position:relative;z-index:1;}
@@ -344,7 +344,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .description.ar {margin-left:auto;display:table;}
 
 /* tags */
-.tags {display:inline-flex;vertical-align:top;}
+.tags {display: flex;vertical-align:top;width: fit-content;}
 .tags-small {font-size:13px;font-weight:500;line-height:1;padding:4px 8px;border-radius:4px;}
 .tags-medium {font-size:14px;font-weight:500;line-height:1;padding:8px 12px;border-radius:8px;}
 
@@ -388,7 +388,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .divide-list span {font-size:14px;color:var(--typography-caption);line-height:1;}
 
 /* icon */
-.icon-only {display:inline-flex;align-items:center;justify-content:center;vertical-align:top;white-space:nowrap;
+.icon-only {display:flex;width:fit-content;align-items:center;justify-content:center;vertical-align:top;white-space:nowrap;
     -webkit-mask-position:center center;
     mask-position:center center;
     -webkit-mask-size:contain;
