--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -93,6 +93,7 @@
 			<div class="guide-column-list">
 				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-delete"></i>삭제</button>
 				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
+				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-refresh"></i><span>다시 시도</span></button>
 			</div>
 			<hr>
 			<h2>Button <span>Noborder</span></h2>
