--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -113,6 +113,30 @@
 					<div class="tags tags-medium tags-disabled_bg">레이블</div>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Large</h2>
+				<div class="guide-column-list">
+					<div class="tags tags-large tags-lightGray">레이블</div>
+					<div class="tags tags-large tags-black-80">레이블</div>
+					<div class="tags tags-large tags-white">레이블</div>
+					<div class="tags tags-large tags-lightBlue">레이블</div>
+					<div class="tags tags-large tags-lightCyan">레이블</div>
+					<div class="tags tags-large tags-lightPurple">레이블</div>
+					<div class="tags tags-large tags-E6E2F2">레이블</div>
+					<div class="tags tags-large tags-lightRed">레이블</div>
+					<div class="tags tags-large tags-lightYellow">레이블</div>
+					<div class="tags tags-large tags-lightPink">레이블</div>
+					<div class="tags tags-large tags-blue">레이블</div>
+					<div class="tags tags-large tags-cyan">레이블</div>
+					<div class="tags tags-large tags-purple">레이블</div>
+					<div class="tags tags-large tags-violet">레이블</div>
+					<div class="tags tags-large tags-red">레이블</div>
+					<div class="tags tags-large tags-yellow">레이블</div>
+					<div class="tags tags-large tags-pink">레이블</div>
+					<div class="tags tags-large tags-disabled_bg">레이블</div>
+				</div>
+			</div>
 		</div>
 
 
