--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -143,6 +143,9 @@
 				</div>
 				<!-- //business-card-info -->
 			</div>
+
+			<hr>
+
 			<div class="ui-guide-box">
 				<h2>divide-list</h2>
 				<div class="divide-list">
@@ -150,6 +153,42 @@
 					<div class="division h12 mx8"></div>
 					<span>부서명</span>
 				</div>
+			</div>
+			<hr>
+
+
+			<div class="ui-guide-box">
+				<h2>memo-list</h2>
+
+				<!-- memo-list -->
+				<div class="memo-list">
+					<div class="memo-inner" data-toggle="toggle-wrap">
+						<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+						<div class="memo-btn">
+							<div class="left">
+								<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+								<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+							</div>
+							<div class="right">
+								<button type="button" class="anchor chevron chevron-down fs-13" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+									<span class="toggle-off">더보기</span>
+									<span class="toggle-on">접기</span>
+								</button>
+							</div>
+						</div>
+						<dl>
+							<dt>작성자이름</dt>
+							<dd>2024-11-06 10:48</dd>
+						</dl>
+						<div class="divide-list">
+							<span>부서명</span>
+							<div class="division h12 mx8"></div>
+							<span>부서명</span>
+						</div>
+					</div>
+				</div>
+				<!-- //memo-list -->
+
 			</div>
 			<hr>
 		</div>
