--- a/html/components/component_toggle.html
+++ b/html/components/component_toggle.html
@@ -74,69 +74,12 @@
 		<div class="ui-guide-section">
 			<h2>CTA <span>Color</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary">btn-primary</button>
-				<button type="button" class="btn-large btn-secondary">btn-secondary</button>
-				<button type="button" class="btn-large btn-tertiary">btn-tertiary</button>
-				<button type="button" class="btn-large btn-outlined">btn-outlined</button>
-				<button type="button" class="btn-large btn-ghost">btn-ghost</button>
-				<button type="button" class="btn-large btn-ghost-white">btn-ghost-white</button>
-
-			</div>
-			<hr>
-
-			<h2>CTA <span>Inner Icon</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>btn-primary</button>
-				<button type="button" class="btn-large btn-secondary"><i class="ico-check"></i>btn-secondary</button>
-				<button type="button" class="btn-large btn-tertiary"><i class="ico-check"></i>btn-tertiary</button>
-				<button type="button" class="btn-large btn-outlined"><i class="ico-check"></i>btn-outlined</button>
-				<button type="button" class="btn-large btn-ghost"><i class="ico-check"></i>btn-ghost</button>
-				<button type="button" class="btn-large btn-primary">btn-primary<i class="ico-check"></i></button>
-				<button type="button" class="btn-large btn-secondary">btn-secondary<i class="ico-check"></i></button>
-				<button type="button" class="btn-large btn-tertiary">btn-tertiary<i class="ico-check"></i></button>
-				<button type="button" class="btn-large btn-outlined">btn-outlined<i class="ico-check"></i></button>
-				<button type="button" class="btn-large btn-ghost">btn-ghost<i class="ico-check"></i></button>
-			</div>
-			<hr>
-			<h2>CTA <span>Disabled</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary" aria-disabled="true">btn-primary</button>
-				<button type="button" class="btn-large btn-secondary" aria-disabled="true">btn-secondary</button>
-				<button type="button" class="btn-large btn-tertiary" aria-disabled="true">btn-tertiary</button>
-				<button type="button" class="btn-large btn-outlined" aria-disabled="true">btn-outlined</button>
-				<button type="button" class="btn-large btn-ghost" aria-disabled="true">btn-ghost</button>
-			</div>
-			<hr>
-
-			<h2>CTA <span>Size</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary">btn-large</button>
-				<button type="button" class="btn-medium btn-primary">btn-medium</button>
-				<button type="button" class="btn-small btn-primary">btn-small</button>
-			</div>
-			<hr>
-
-			<h2>CTA <span>Radius</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="btn-small btn-primary btn-round">btn-round</button>
-			</div>
-			<hr>
-
-			<h2>CTA <span>Text</span></h2>
-			<div class="guide-column-list">
-				<a href="#" class="anchor chevron fs-14">레이블 Small</a>
-				<a href="#" class="anchor chevron fs-13">레이블 Xsmall</a>
-				<a href="#" class="anchor chevron chevron-up fs-13">접기</a>
-				<a href="#" class="anchor chevron chevron-down fs-13">더보기</a>
-				<a href="#" class="anchor underline fs-13">레이블 Underline</a>
-			</div>
-			<hr>
-
-			<h2>CTA <span>FAB</span></h2>
-			<div class="guide-column-list">
-				<button type="button" class="fab fab-square view-more" aria-label="더보기"></button>
-				<button type="button" class="fab fab-circle view-more" aria-label="더보기"></button>
-				<button type="button" class="fab fab-square scroll-to-top" aria-label="최상단으로 이동"></button>
+				<div data-toggle="toggle-wrap">
+					<button type="button" class="anchor chevron chevron-down fs-13" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+						<span class="toggle-off">더보기</span>
+						<span class="toggle-on">접기</span>
+					</button>
+				</div>
 			</div>
 			<hr>
 		</div>
