--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -139,6 +139,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mt-1 {margin-top:-1px!important;}
 .mt0 {margin-top:0px!important;}
 .mt2 {margin-top:2px!important;}
+.mt4 {margin-top:4px!important;}
 .mt5 {margin-top:5px!important;}
 .mt8 {margin-top:8px!important;}
 .mt10 {margin-top:10px!important;}
@@ -161,6 +162,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mbauto {margin-bottom:auto!important;}
 .mb0 {margin-bottom:0px!important;}
 .mb2 {margin-bottom:2px!important;}
+.mb4 {margin-bottom:4px!important;}
 .mb5 {margin-bottom:5px!important;}
 .mb8 {margin-bottom:8px!important;}
 .mb10 {margin-bottom:10px!important;}
@@ -182,6 +184,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mlauto {margin-left:auto!important;}
 .ml0 {margin-left:0px!important;}
 .ml2 {margin-left:2px!important;}
+.ml4 {margin-left:4px!important;}
 .ml5 {margin-left:5px!important;}
 .ml8 {margin-left:8px!important;}
 .ml10 {margin-left:10px!important;}
@@ -202,6 +205,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mrauto {margin-right:auto!important;}
 .mr0 {margin-right:0px!important;}
 .mr2 {margin-right:2px!important;}
+.mr4 {margin-right:4px!important;}
 .mr5 {margin-right:5px!important;}
 .mr8 {margin-right:8px!important;}
 .mr10 {margin-right:10px!important;}
@@ -222,6 +226,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mauto {margin:auto!important;}
 
 .m0 {margin:0px!important;}
+.m4 {margin:4px!important;}
 .m5 {margin:5px!important;}
 .m8 {margin:8px!important;}
 .m10 {margin:10px!important;}
@@ -240,6 +245,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .m100 {margin:100px!important;}
 
 .my0 {margin-top:0px!important;margin-bottom:0px!important;}
+.my4 {margin-top:4px!important;margin-bottom:4px!important;}
 .my5 {margin-top:5px!important;margin-bottom:5px!important;}
 .my8 {margin-top:8px!important;margin-bottom:8px!important;}
 .my10 {margin-top:10px!important;margin-bottom:10px!important;}
@@ -259,6 +265,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .my100 {margin-top:100px!important;margin-bottom:100px!important;}
 
 .mx0 {margin-left:0px!important;margin-right:0px!important;}
+.mx4 {margin-left:4px!important;margin-right:4px!important;}
 .mx5 {margin-left:5px!important;margin-right:5px!important;}
 .mx8 {margin-left:8px!important;margin-right:8px!important;}
 .mx10 {margin-left:10px!important;margin-right:10px!important;}
@@ -278,6 +285,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx100 {margin-left:100px!important;margin-right:100px!important;}
 
 .pt0 {padding-top:0px!important;}
+.pt4 {padding-top:4px!important;}
 .pt5 {padding-top:5px!important;}
 .pt8 {padding-top:8px!important;}
 .pt10 {padding-top:10px!important;}
@@ -297,6 +305,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pt100 {padding-top:100px!important;}
 
 .pb0 {padding-bottom:0px!important;}
+.pb4 {padding-bottom:4px!important;}
 .pb5 {padding-bottom:5px!important;}
 .pb8 {padding-bottom:8px!important;}
 .pb10 {padding-bottom:10px!important;}
@@ -316,6 +325,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pb100 {padding-bottom:100px!important;}
 
 .pl0 {padding-left:0px!important;}
+.pl4 {padding-left:4px!important;}
 .pl5 {padding-left:5px!important;}
 .pl8 {padding-left:8px!important;}
 .pl10 {padding-left:10px!important;}
@@ -335,6 +345,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pl100 {padding-left:100px!important;}
 
 .pr0 {padding-right:0px!important;}
+.pr4 {padding-right:4px!important;}
 .pr5 {padding-right:5px!important;}
 .pr8 {padding-right:8px!important;}
 .pr10 {padding-right:10px!important;}
@@ -354,6 +365,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pr100 {padding-right:100px!important;}
 
 .p0 {padding:0px!important;}
+.p4 {padding:4px!important;}
 .p5 {padding:5px!important;}
 .p8 {padding:8px!important;}
 .p10 {padding:10px!important;}
