--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -92,6 +92,7 @@
 					cancelButton: "btn-large btn-outlined",
 					confirmButton: "btn-large btn-primary",
 				},
+				// allowOutsideClick: false,
 				buttonsStyling: false,
 				html: `
 						<i class="icon-only icon-48 icon-camera bg-icon bg-icon-gray_1"></i>
