--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -70,7 +70,7 @@
 		<h1>Modal</h1>
 		<div class="ui-guide-section">
 			<div class="guide-column-list">
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-layout">modal-layout</button>
+				<a href="#" class="btn-large btn-outlined" data-micromodal-trigger="modal-layout">modal-layout</a>
 				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-select">modal-select</button>
 				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-select-filter">modal-select-filter</button>
 				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert1">modal-alert1 (prevent close)</button>
@@ -105,7 +105,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-select">저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
