--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -95,6 +95,10 @@
 				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
 				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-refresh"></i><span>다시 시도</span></button>
 				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-memo"></i><span>메모 등록</span></button>
+				<div class="btn-small btn-outlined btn-round">
+					<button class="btn-inner">반도체</button>
+					<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+				</div>
 			</div>
 			<hr>
 			<h2>Button <span>Noborder</span></h2>
