--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -116,7 +116,7 @@
 									<div class="info-td">
 										<div class="group gap10 py0">
 											회사이름
-											<a href="#" class="anchor chevron fs-14">기업조회</a>
+											<a href="#" class="anchor chevron fs-16">기업조회</a>
 										</div>
 									</div>
 								</div>
@@ -148,11 +148,13 @@
 
 			<div class="ui-guide-box">
 				<h2>divide-list</h2>
+				<!-- divide-list -->
 				<div class="divide-list">
 					<span>부서명</span>
 					<div class="division h12 mx8"></div>
 					<span>부서명</span>
 				</div>
+				<!-- //divide-list -->
 			</div>
 			<hr>
 
@@ -170,7 +172,7 @@
 								<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
 							</div>
 							<div class="right">
-								<button type="button" class="anchor chevron chevron-down fs-13" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+								<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
 									<span class="toggle-off">더보기</span>
 									<span class="toggle-on">접기</span>
 								</button>
@@ -191,6 +193,48 @@
 
 			</div>
 			<hr>
+
+
+			<div class="ui-guide-box">
+				<h2>figure-list</h2>
+                <!-- figure-list -->
+				<div class="figure-list">
+					<ul>
+						<li>
+							<figure>
+								<picture>
+									<source srcset="../../resources/images/PBWMA/ico-fig-list01.svg">
+									<img src="../../resources/images/PBWMA/ico-fig-list01.svg" alt="">
+								</picture>
+								<figcaption>수익률 Best</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<picture>
+									<source srcset="../../resources/images/PBWMA/ico-fig-list02.svg">
+									<img src="../../resources/images/PBWMA/ico-fig-list02.svg" alt="">
+								</picture>
+								<figcaption>판매 Best</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<picture>
+									<source srcset="../../resources/images/PBWMA/ico-fig-list03.svg">
+									<img src="../../resources/images/PBWMA/ico-fig-list03.svg" alt="">
+								</picture>
+								<figcaption>이달의 추천 펀드</figcaption>
+							</figure>
+						</li>
+					</ul>
+				</div>
+                <!-- //figure-list -->
+
+			</div>
+			<hr>
+
+
 		</div>
 	</div>
 
