--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -175,6 +175,49 @@
 				</div>
 				<!-- //group -->
 
+				<!-- group-form -->
+				<div class="group-form py16">
+					<div class="group-title">
+						<strong class="title-large fw-500">최근 검색어</strong>
+					</div>
+					<div class="group-content content-fluid px0 mt14">
+						<ul class="d-flex overflow-list px16">
+							<li>
+								<div class="btn-small btn-outlined btn-round">
+									<button class="btn-inner">반도체</button>
+									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+								</div>
+							</li>
+							<li>
+								<div class="btn-small btn-outlined btn-round">
+									<button class="btn-inner">배당</button>
+									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+								</div>
+							</li>
+							<li>
+								<div class="btn-small btn-outlined btn-round">
+									<button class="btn-inner">레버리지</button>
+									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+								</div>
+							</li>
+							<li>
+								<div class="btn-small btn-outlined btn-round">
+									<button class="btn-inner">키워드</button>
+									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+								</div>
+							</li>
+							<li>
+								<div class="btn-small btn-outlined btn-round">
+									<button class="btn-inner">키워드</button>
+									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<!-- //group-form -->
+
+
 
 			</div>
 
