--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -169,6 +169,32 @@
 				</dd>
 			</dl>
 		</div>
+		<hr>
+		<div class="ui-guide-box">
+			<h2>Tab</h2>
+			<dl>
+				<dt>Three Tabs</dt>
+				<dd>
+					<div class="inp inp-board">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+					</div>
+				</dd>
+			</dl>
+			<dl>
+				<dt>Tabs</dt>
+				<dd>
+					<div class="inp inp-board">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+						<input type="checkbox" aria-label="텍스트">
+					</div>
+				</dd>
+			</dl>
+		</div>
 	</div>
 </body>
 
