--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -8,7 +8,7 @@
 .group-form {}
 .group-form .group-title {display:flex;align-items:center;justify-content:space-between;}
 .group-form .group-content {margin-top:4px;}
-.group-form .group-content-fluid {margin:0 -16px;}
+
 
 .group-title strong {display:flex;align-items:center;padding:0 4px;}
 .group-title .apos {color:var(--status-error);margin-left:2px;}
@@ -54,10 +54,10 @@
 /* sort-wrap */
 .sort-wrap {padding:8px 0;}
 .sort-wrap .sort-list:not(:first-child) {margin-top:12px;}
-.sort-wrap .sort-list {display:flex;align-items:center;justify-content:flex-end;padding:8px 16px;margin-left:auto;border-radius:24px;border:1px solid var(--border-8);}
+.sort-wrap .sort-list {display:flex;align-items:center;justify-content:flex-end;padding:8px 8px 8px 16px;margin-left:auto;border-radius:24px;border:1px solid var(--border-8);background-color:var(--white-100);}
 .sort-wrap .sort-list .filter {display:flex;align-items:center;gap:2px;}
-.sort-wrap .sort-list .filter span {font-size:14px;font-weight:500;color:var(--typography-gray);}
-.sort-wrap .sort-list .sort {display:flex;align-items:center;gap:12px;font-size:14px;font-weight:500;color:var(--typography-gray);}
+.sort-wrap .sort-list .filter span {font-size:16px;color:var(--typography-gray);line-height:1;}
+.sort-wrap .sort-list .sort {display:flex;align-items:center;gap:12px;font-size:16px;color:var(--typography-gray);line-height:1;}
 .sort-wrap .sort-list .sort:after {content:'';flex:0 0 16px;width:16px;height:16px;
     -webkit-mask-position:center center;
     mask-position:center center;
@@ -94,14 +94,14 @@
 
 /* upload-picture */
 .upload-picture {position:relative;display:flex;align-items:center;justify-content:center;}
-.upload-picture .upload-type-select {display:flex;gap:16px;padding:35px 26px;flex:1;height:53vw;border-radius:8px;border:1px solid var(--border-8);background:var(--black-56);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.upload-picture .upload-type-select {display:flex;gap:16px;padding:35px 26px;flex:1;height:53vw;border-radius:8px;border:1px solid var(--border-8);background-color:var(--black-56);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .upload-picture .upload-type-select button {display:flex;align-items:center;justify-content:center;flex-direction:column;gap:6px;font-size:16px;font-weight:500;color:var(--white-100);line-height:1;height:100%;flex:1;}
 .upload-picture .upload-type-select button:before {content:'';width:48px;flex:0 0 48px;height:48px;}
 .upload-picture .upload-type-select .upload-gallery:before {background:url(../images/common/img_upload_gallery.svg) center center / contain no-repeat;}
 .upload-picture .upload-type-select .upload-camera:before {background:url(../images/common/img_upload_camera.svg) center center / contain no-repeat;}
 .upload-picture picture {flex:1 1 100%;}
 .upload-picture picture img {border-radius:8px;border:1px solid var(--border-8);width:100%;}
-.upload-picture .picture-dimmed {position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:flex-end;background:var(--black-16);border-radius:8px;padding:12px 16px;align-items:flex-start;}
+.upload-picture .picture-dimmed {position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:flex-end;background-color:var(--black-16);border-radius:8px;padding:12px 16px;align-items:flex-start;}
 .upload-picture .upload-picture-anchor {display:block;width:100%;}
 
 /* pinch-zoom-wrap */
@@ -208,3 +208,41 @@
 .memo-inner .memo-btn .left {display:none;}
 .memo-inner.is-toggled p {-webkit-line-clamp:none;}
 .memo-inner.is-toggled .memo-btn .left {display:flex;}
+
+
+/* figure-list */
+.figure-list {}
+.figure-list ul {display:flex;gap:4px;}
+.figure-list ul li {flex:1;}
+.figure-list figure {}
+.figure-list figure picture {border-radius:24px;background-color:var(--surface-surface50);display:flex;align-items:center;justify-content:center;flex:0 0 80px;width:80px;height:80px;margin:0 auto;padding:18px;}
+.figure-list figure picture img {}
+.figure-list figure figcaption {font-size:16px;color:var(--typography-gray);line-height:1;text-align:center;margin-top:12px;}
+
+/* keyword-list */
+.keyword-list {display:flex;flex-wrap:wrap;padding:24px 0 60px 24px;background-color:var(--background-bg_lightGray);gap:8px 4px;}
+.keyword-list button {display:flex;align-items:center;justify-content:center;border-radius:24px;border:1px solid var(--border-8);background-color:var(--surface-surface);padding:10px 8px 10px 16px;gap:6px;font-size:18px;font-weight:400;color:var(--typography-gray);line-height:1;}
+.keyword-list button:after {content:'';flex:0 0 12px;width:12px;height:12px;background:url(../images/ico/ico_link_12_gr.svg) center center / contain no-repeat;}
+.keyword-list button .rise {display:flex;align-items:center;gap:2px;color:var(--red-600)}
+.keyword-list button .rise:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(../images/ico/ico_triangle_up.svg) center center / contain no-repeat;}
+.keyword-list button .fall {display:flex;align-items:center;gap:2px;color:var(--deepblue-600)}
+.keyword-list button .fall:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(../images/ico/ico_triangle_down.svg) center center / contain no-repeat;}
+.keyword-list button .steady {display:flex;align-items:center;gap:2px;}
+.keyword-list button .steady:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(../images/ico/ico_steady.svg) center center / contain no-repeat;}
+.keyword-list button .flag {flex:0 0 18px;width:18px;height:18px;}
+
+.keyword-list button .flag-korea {background:url(../images/flag/ico_korea.svg) center center / contain no-repeat;}
+.keyword-list button .flag-usa {background:url(../images/flag/ico_usa.svg) center center / contain no-repeat;}
+.keyword-list button .flag-europe {background:url(../images/flag/ico_europe.svg) center center / contain no-repeat;}
+.keyword-list button .flag-japan {background:url(../images/flag/ico_japan.svg) center center / contain no-repeat;}
+.keyword-list button .flag-china {background:url(../images/flag/ico_china.svg) center center / contain no-repeat;}
+.keyword-list button .flag-india {background:url(../images/flag/ico_india.svg) center center / contain no-repeat;}
+.keyword-list button .flag-vietnam {background:url(../images/flag/ico_vietnam.svg) center center / contain no-repeat;}
+.keyword-list button .flag-asia {background:url(../images/flag/ico_asia.svg) center center / contain no-repeat;}
+.keyword-list button .flag-south-america {background:url(../images/flag/ico_south_america.svg) center center / contain no-repeat;}
+.keyword-list button .flag-global {background:url(../images/flag/ico_global.svg) center center / contain no-repeat;}
+.keyword-list button .flag-emerging {background:url(../images/flag/ico_emerging.svg) center center / contain no-repeat;}
+.keyword-list button .flag-foreign {background:url(../images/flag/ico_foreign.svg) center center / contain no-repeat;}
+
+/* fund-result */
+.fund-result {background-color:var(--background-bg_lightGray);}
